syntax = "proto3";
package processor.protobuf;

option java_package = "mqtt.mapping.extension.internal";
option java_outer_classname = "InternalCustomAlarmOuter";

message InternalCustomAlarm {
  int64 timestamp = 1;
  string txt = 2;
  string unit = 3;
  string externalIdType = 4;
  string externalId = 5;
  string alarmType = 6;
  string severity = 7;
}